--- a/src/Scss/layout/_utilities.scss
+++ b/src/Scss/layout/_utilities.scss
@@ -8,7 +8,7 @@ $body-stack: 'helvetica', sans-serif;
 $decorative-stack: 'Tangerine',cursive, serif;
 
 //breakpoints
-$xl-max: 9999px;
+$xl-max: 99999px;
 $xl-min: 1600px;
 
 $lg-max: 1599px;
@@ -21,5 +21,6 @@ $sm-max: 899px;
 $sm-min: 600px;
 
 $xs-max: 599px;
+$xs-min: 0px;
 
 
