--- a/src/Scss/layout/_index.scss
+++ b/src/Scss/layout/_index.scss
@@ -1,6 +1,10 @@
-@import "utilities";
 @import "footer";
 @import "header";
-@import "base";
+@import "hero";
+@import "containers";
+@import "b-1-col";
+@import "b-2-col";
+@import "b-3-img";
+
 
 
