--- a/src/Scss/components/_carousel.scss
+++ b/src/Scss/components/_carousel.scss
@@ -1,63 +1,93 @@
-.carousel {
+.b-carousel {
  overflow: hidden;
- width:100vw;
- height:100vh;
+ width:100%;
+ position: relative;
+ padding-bottom: 1rem;
 }
 
-.carousel__carousel-frame {
+.b-carousel__carousel-frame {
   display: flex;
   transform: translate(0vw, 0px);
+  opacity: 1;
   transition:0.5s;
+  height:25rem;
 }
 
-.carousel__carousel-item{
+.b-carousel__carousel-item{
   display:flex;
+  flex-shrink: 0;
   align-items:center;
   justify-content:center;
-  flex-direction:column;
-  background-size: cover;
-  background-repeat: no-repeat;
   color:white;
-  width:100vw;
-  height:100vh;
+  opacity: 1;
+  transition: opacity 1s;
+  height:100%;
+  width: 26.7vw;
+  margin-left: 5vw;
 }
 
-.carousel__carousel-item:nth-child(1) {
-    background-image: url('../images/hero-background.jpg');
-}
-.carousel__carousel-item:nth-child(2) {
-    background-image: url('../images/food-background-1.jpg');
-}
-.carousel__carousel-item:nth-child(3) {
-    background-image: url('../images/food-background-2.jpg');
+.b-carousel__image{
+  width: 100%;
+  height: 75%;
+  background-size: cover;
+  background-position-y: center;
 }
 
+.b-carousel__headline {
+  padding-top: 5rem;
+  margin-top:0px;
+  font-size: $section__headline;
+}
 
-.carousel__carousel-control{
+// .carousel__carousel-item:nth-child(1) {
+//     // background-image: url('../images/hero-background.jpg');
+// }
+// .carousel__carousel-item:nth-child(2) {
+//     // background-image: url('../images/food-background-1.jpg');
+// }
+// .carousel__carousel-item:nth-child(3) {
+//     // background-image: url('../images/food-background-2.jpg');
+// }
+
+
+.b-carousel__carousel-control{
   z-index: 11;
   position: absolute;
-  top: 50%;
+  top: calc(50% - 25px);
   background-color: transparent;
   border:none;
   box-shadow: none;
-  color:white;
+  color:$brand-black;
   font-size: 40px;
   outline: none;
   cursor: pointer;
 }
 
-.carousel__carousel-control:nth-child(1){
-  right: 20px;
+.b-carousel__carousel-control--right{
+  right: 15px;
 }
 
-.carousel__carousel-control:nth-child(2){
-  left: 20px;
+.b-carousel__carousel-control--left{
+  left: 15px;
+}
+
+//md styles and down
+@media only screen and (max-width:$md-max) {
+  .b-carousel__carousel-item{
+    width:40vw;
+    margin-left:7vw;
+  }
+}
+
+//Small styles and down
+@media only screen and (max-width:$sm-max) {
+  .b-carousel__carousel-item{
+    width:75vw;
+    margin-left: 12.5vw;
+  }
 }
 
 //X-Small styles and down
 @media only screen and (max-width:$xs-max) {
-  .carousel__carousel-control{
-    top:30%;
-    opacity: .5;
-  }
+
 }
